docs(java): add Fory JSON user guide